# diesel_uuid

./: Cargo.toml  LICENSE  README.md  diesel.toml
migrations/2023-09-22-145610_create_posts/: down.sql  up.sql
migrations/2023-10-17-220934_create_posts/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs  sql_types.rs
