[package]
name = "diesel_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
chrono = "0.4.31"
uuid = { version = "1.4.0", features = ["serde", "v4", "fast-rng"] }
diesel = { version = "2.1.2", features = ["postgres", "uuid", "chrono", "64-column-tables"] }
dotenvy = "0.15"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
postgis_diesel = "2.2.1"
