[package]
name = "diesel_uuid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
diesel = { version = "2.1.0", features = ["chrono", "postgres", "r2d2", "uuid"] }
